Added completed stage to pipelline

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,14 +1,9 @@
 pipeline {
     agent any
     stages {
-        stage('Build') {
-            steps {
-                sh 'mvn -B -DskipTests clean package'
-            }
-        }
         stage('Test') {
             steps {
-                sh 'mvn test'
+                sh 'test'
             }
             post {
                 always {
@@ -19,6 +14,11 @@ pipeline {
         stage('Deliver') {
             steps {
                 sh './jenkins/scripts/deliver.sh'
+            }
+        }
+        stage('Complete') {
+            steps {
+                echo 'Job Complete'
             }
         }
     }
